# dagster-example

./: .env.sample  .gitignore  README.md  pyproject.toml
dagster_project/: definitions.py
dagster_project/assets/dbt/: __init__.py
dagster_project/assets/pyairbyte_project/: __init__.py  example.ipynb
dagster_project/resources/: __init__.py
dbt_project/: profiles.yml
